--- a/_modules.yml
+++ b/_modules.yml
@@ -2,16 +2,16 @@ config:
   vars:
     - name: DEFAULT_PASSWORD
       desc: Default password for users in the environment
-      value: openshift
+      value: openshift123
     - name: GIT_SERVER_URL
       desc: Git server url
-      value: http://gitlab-ci.apps.ocp.cloudvillage.in
+      value: http://gogs.redhatworkshops.io
     - name: CONSOLE_ADDRESS
       desc: HTTP address of the OpenShift console
-      value: https://master.ocp.cloudvillage.in:8443
+      value: https://openshift-master.ocp.redhatworkshops.io
     - name: APPS_ADDRESS
       desc: HTTP address suffix of apps deployed on OpenShift
-      value: apps.ocp.cloudvillage.in
+      value: apps.ocp.redhatworkshops.io
     - name: GET_STARTED_CLI_URL
       desc: URL to documentation to configure CLI
       value: https://docs.openshift.com/container-platform/latest/cli_reference/get_started_cli.html
@@ -20,7 +20,7 @@ config:
       value: http://nexus.ci.svc.cluster.local:8081/repository/maven-public/
     - name: REDHAT_DOWNLOAD_OC_PORTAL_URL
       desc: URL for Red Hat portal oc binary download
-      value: https://access.redhat.com/downloads/content/290
+      value: http://oc.redhatworkshops.io
 
 modules:
   0-setting-up-client-tools:
